--- a/src/style/maturity-badge.module.css
+++ b/src/style/maturity-badge.module.css
@@ -7,7 +7,6 @@
     cursor: default;
     white-space: nowrap;
     border: 2px solid transparent;
-    margin-left: 8px;
 }
 
 .speculative {
